Initial Dark Mode integration with icons fixes
Dark mode has been integrated as a base and side bar fonts and headers fixed.

--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -37,9 +37,9 @@ section {
       right:0;
       display: flex;
       justify-content: space-between;
-      background-color: hsla(0, 0%, 100%, 0.8) !important;
+      background-color: hsla(0, 0%, 100%, 0.8);
       box-shadow: inset 0 0 1px 1px hsla(0, 0%, 100%, 0.9),
-        0 20px 27px 0 rgba(0, 0, 0, 0.05) !important;
+        0 20px 27px 0 rgba(0, 0, 0, 0.05);
       backdrop-filter: saturate(200%) blur(30px);
       padding: 0.5rem;
       font-size: 0.9rem;
