--- a/src/app/theme/components/header/header.component.scss
+++ b/src/app/theme/components/header/header.component.scss
@@ -58,7 +58,6 @@ nav {
 
 .count-down {
   border-radius: 20%;
-  padding: 8px;
   color: black;
   font-weight: bold;
 }
@@ -126,8 +125,6 @@ form {
 }
 
 .custom-style {
-  font-size: 18px;
-
   .item {
     padding-left: 4px;
     padding: 5px;
@@ -149,7 +146,6 @@ form {
     }
   }
 }
-
 .p-avatar {
   display: inline-flex;
   align-items: center;
@@ -161,9 +157,8 @@ form {
   border-radius: 10px !important;
 
 }
-
 .dropbtn {
-  color: white;
+  color: #9bc326 !important;
   padding: 16px;
   font-size: 16px;
   border: none;
